--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dateformat": "^3.0.3",
     "express": "^4.16.4",
     "multer": "^1.4.1",
-    "mysql": "^2.16.0"
+    "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
